testsuite/tests/contrib/lkt_semantic/array_list_methods/test.out
Resolving test.lkt
==================
Id   <RefId "ASTList" test.lkt:3:28-3:35>
     references <GenericDecl "ASTList" __prelude:23:10-24:2>

Id   <RefId "String" test.lkt:3:36-3:42>
     references <StructDecl "String" __prelude:26:10-28:2>

Id   <RefId "Int" test.lkt:3:46-3:49>
     references <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "self" test.lkt:3:52-3:56>
     references <FunArgDecl "self" test.lkt:3:22-3:43>

Expr <RefId "self" test.lkt:3:52-3:56>
     has type <InstantiatedGenericType "ASTList[String]" __prelude:23:10-24:2>

Id   <RefId "length" test.lkt:3:57-3:63>
     references <FunDecl "length" __prelude:11:14-11:31>

Expr <RefId "length" test.lkt:3:57-3:63>
     has type <FunctionType "() -> Int" __prelude>

Expr <DotExpr test.lkt:3:52-3:63>
     has type <FunctionType "() -> Int" __prelude>

Expr <CallExpr test.lkt:3:52-3:65>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "Array" test.lkt:4:26-4:31>
     references <GenericDecl "Array" __prelude:20:10-22:2>

Id   <RefId "String" test.lkt:4:32-4:38>
     references <StructDecl "String" __prelude:26:10-28:2>

Id   <RefId "Int" test.lkt:4:42-4:45>
     references <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "self" test.lkt:4:48-4:52>
     references <FunArgDecl "self" test.lkt:4:20-4:39>

Expr <RefId "self" test.lkt:4:48-4:52>
     has type <InstantiatedGenericType "Array[String]" __prelude:20:10-22:2>

Id   <RefId "length" test.lkt:4:53-4:59>
     references <FunDecl "length" __prelude:11:14-11:31>

Expr <RefId "length" test.lkt:4:53-4:59>
     has type <FunctionType "() -> Int" __prelude>

Expr <DotExpr test.lkt:4:48-4:59>
     has type <FunctionType "() -> Int" __prelude>

Expr <CallExpr test.lkt:4:48-4:61>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "ASTList" test.lkt:5:33-5:40>
     references <GenericDecl "ASTList" __prelude:23:10-24:2>

Id   <RefId "String" test.lkt:5:41-5:47>
     references <StructDecl "String" __prelude:26:10-28:2>

Id   <RefId "String" test.lkt:5:51-5:57>
     references <StructDecl "String" __prelude:26:10-28:2>

Id   <RefId "self" test.lkt:5:60-5:64>
     references <FunArgDecl "self" test.lkt:5:27-5:48>

Expr <RefId "self" test.lkt:5:60-5:64>
     has type <InstantiatedGenericType "ASTList[String]" __prelude:23:10-24:2>

Expr <NumLit test.lkt:5:65-5:67>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Expr <CallExpr test.lkt:5:60-5:68>
     has type <StructDecl "String" __prelude:26:10-28:2>

Id   <RefId "ASTList" test.lkt:13:39-13:46>
     references <GenericDecl "ASTList" __prelude:23:10-24:2>

Id   <RefId "String" test.lkt:13:47-13:53>
     references <StructDecl "String" __prelude:26:10-28:2>

Id   <RefId "String" test.lkt:13:57-13:63>
     references <StructDecl "String" __prelude:26:10-28:2>

test.lkt:13:66: error: Cannot find entity `self` in this scope
12 | @invalid fun test_astlist_indexing(a: ASTList[String]): String = self(12)
   |                                                                  ^^^^    

Expr <CallExpr test.lkt:13:66-13:74>
     has type <StructDecl "String" __prelude:26:10-28:2>

